Closed Bug 1079325 Opened 10 years ago Closed 10 years ago

Fix some more bad implicit constructors in media

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
      No description provided.
Attachment #8501135 - Flags: review?(cpearce)
Attachment #8501135 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/f992171f26cd
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.