Bug 1079325 - Fix some more bad implicit constructors in media; r=cpearce